<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_tutorials"
        android:icon="@drawable/ic_tutorials_list"
        android:title="@string/menu_tutorials" />
    <item
        android:id="@+id/menu_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/menu_categories" />
    <item
        android:id="@+id/menu_check_mechs"
        android:icon="@drawable/ic_check_mechs"
        android:title="@string/menu_check_mechs"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:title="@string/menu_about" />


</menu>
